# nushell

.github/workflows/: mayhem.yml
crates/nu-parser/fuzz/: Cargo.toml
crates/nu-parser/fuzz/fuzz_targets/: lexer.rs  lite_parse.rs
mayhem/: Dockerfile  lexer.mayhemfile  lite_parser.mayhemfile
